--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
         <form method="GET" action="results.html">
             <div>
                 <label for="firstname">Your First Name</label>
-                <input type="text" id="firstname" name="firstname">
+                <span class="required-field">*</span>
+                <input type="text" id="firstname" name="firstname" minlength="2" maxlength="35" required>
                 <label for="lastname">Your Last Name</label>
-                <input type="text" id="lastname" name="lastname">
+                <span class="required-field">*</span>
+                <input type="text" id="lastname" name="lastname" minlength="2" maxlength="35" required>
+                <label for="age">Your Age</label>
+                <span class="required-field">*</span>
+                <input type="number" name="age" id="age" min="21" max="120" required>
+                <h5>One must be at least 21 years of age to enter the contest.</h5>
             </div>
             <fieldset>
                 <legend>Your Contact Info</legend>
@@ -86,7 +92,7 @@
                         <option value="WY">Wyoming</option>
                     </datalist>
                     <label for="zip">Your Zipcode</label>
-                    <input type="text" id="zip" name="zip">
+                    <input type="text" title="5-Digit US Zip Code" pattern="[0-9]{5}" id="zip" name="zip" >
                 </div>
             </fieldset>
 
@@ -131,6 +137,13 @@
                     <label for="drinks">All-inclusive Drinks Package</label>
                 </div>
             </fieldset>
+            <div>
+                <label for="password">Your Secret Code</label>
+                <span class="required-field">*</span>
+                <input type="password" title="6 Alphanumeric Character Passcode" pattern="[0-9a-zA-Z]{6}" id="password" name="password" required >
+
+
+            </div>
             
             <input type="submit" value="Enter the Contest!">
         </form>
